--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -1,14 +1,10 @@
 ﻿@model ImpactMap.Controllers.InvestmentViewModel
-
 @{
     ViewBag.Title = "Create";
 }
-
 @*Investments create form*@
-
 <div class="container">
     <h2>Create Investment</h2>
-
     @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "createInvestmentForm" }))
     {
         @Html.AntiForgeryToken()
@@ -16,12 +12,10 @@
         <div class="form-horizontal">
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
             @*Date field*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @*<input type="date" value=@DateTime.Now class="form-control" required/>*@
                     @Html.EditorFor(model => model.Investment.date, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
                 </div>
@@ -35,7 +29,7 @@
                 </div>
             </div>
 
-            @*In Kind checkbox -- when checked it displays the field below for volunteer hours*@
+            @*In Kind checkbox - Marks the donation as inKind*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.isInKind, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -46,14 +40,12 @@
                 </div>
             </div>
 
-            <!---Needs to populate only projects from the signed in entity-->
-
             @*ProjectFrom dropdown populates based on current entity, sent in via the Entities/Create GET action*@
-
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.projectFrom, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     <select name="projectFrom_ID">
+                        <option value="0">No Project Selected</option>
                         @foreach (var project in Model.Projects)
                         {
                             <option value=@project.ID>@project.name</option>
@@ -81,21 +73,19 @@
                     <select name="projectTo_ID" id="ProjectToDropdown"></select>
                 </div>
             </div>
-            @*Categories list with checkboxes - populates using an ajax call (load_categories) below*@                
+            @*Categories list with checkboxes - populates using an ajax call (load_categories) below*@
             <div class="form-group">
                 <dd>Investment Tags</dd>
                 <div class="col-md-10">
                     <div id="CatList">
-                        <ul>
-
-                        </ul>
+                        <ul></ul>
                     </div>
                     @*Hidden input field that javascript below adds stuff to, this is sent to the controller*@
                     <input name="categories" id="categories" type="hidden" />
                     @Html.ActionLink("Add New Tag", "Create", "Categories")
                 </div>
             </div>
-
+           
             @*Description input form*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.description, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -104,7 +94,6 @@
                     @Html.ValidationMessageFor(model => model.Investment.description, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="button" id="submitButton" value="Create" class="btn btn-default" />
@@ -113,16 +102,13 @@
             <br />
         </div>
     }
-
     <div class="addpadding">
         @Html.ActionLink("Investments List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
     </div>
 </div>
 
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-
     <script>
         //selectedCategories is an array which is put into the hidden categories field and then sent to the controller
         selectedCategories = [];
@@ -173,23 +159,8 @@
             }
         }
 
-               
 
-        ////Cause the Volunteer Hours input box to show if In Kind checkbox is checked
-        //function addVolunteerHours() {
-        //    $('#Investment_isInKind').click(function () {
-        //        if ($('#VolunteerContainer').hasClass('hideFormField')) {
-        //            $('#VolunteerContainer').removeClass('hideFormField')
-        //            $('#VolunteerContainer').addClass('showFormField')
-        //        }
-        //        else {
-        //            $('#VolunteerContainer').removeClass('showFormField')
-        //            $('#VolunteerContainer').addClass('hideFormField')
-        //        }
-        //    });
-        //}
-
-        //When the submit button is clicked, it 
+        //When the submit button is clicked, it
         $('#submitButton').click(function () {
             $('#createInvestmentForm').submit();
         });
