--- a/ImpactMap/Views/Investments/Edit.cshtml
+++ b/ImpactMap/Views/Investments/Edit.cshtml
@@ -123,7 +123,7 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Create" class="button" />
+                            <input type="submit" value="Save" class="button" />
                         </div>
                     </div>
                     <br />
